Working on getting DNS and gitpages to be friendly

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,16 +2,54 @@ body {
     background-color: #000;
     color: #fff;
     font-family: Arial, sans-serif;
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+// .business-card {
+//     text-align: center;
+//     width: 80vw;
+//     height: 80vh;
+//     padding: 20px;
+//     background-color: #000080; /* This is a dark blue color. */
+//     border-radius: 10px;
+//     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); /* This adds a subtle shadow to the card. */
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+// }
 
 .business-card {
     text-align: center;
-    margin: 0 auto;
-    width: 300px;
-    padding: 20px;
-    background-color: #222;
+    width: 80vw;
+    background-color: #000080;
     border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    position: relative;
 }
+
+.business-card:before {
+    content: "";
+    display: block;
+    padding-top: 57.14%; /* 1 / 1.75 = 0.5714, which is 57.14% */
+}
+
+.business-card-content {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
 
 .contact-icons {
     display: flex;
@@ -27,4 +65,42 @@ body {
     &:hover {
         transform: scale(1.2);
     }
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 512px;
+  height: 512px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #555;
+  color: white;
+  transform: rotateY(180deg);
 }
